# concreate_inspection_app

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
data/annotations/: instances_default.json
notebooks/: annotation_poc.ipynb
tests/: test_main.py
